--- a/.bazelrc
+++ b/.bazelrc
@@ -1,21 +1,16 @@
-try-import .bazelrc.user
-
-# Makes the sandbox environment minimal with only PATH=/bin:/usr/bin:/usr/local/bin
-# Even though I like the idea, the problem is that on MacOS with homebrew, apps are installed under /opt/homebrew/bin
-# So we have three options:
-# - Do not use --experimental_strict_action_env
-# - Put the burden on the user and let them define variables for each host tool like XORRISO_PATH=/opt/homebrew/bin/xorriso
-#   in their .bazelrc.user
-# - Add some magic in our bazel rules
-#
-# For now, we just do not enable --experimental_strict_action_env
-#build --experimental_strict_action_env
+build --macos_sdk_version=13.1
 
 build --cpu=x86_64
 build --crosstool_top=//toolchain
 build --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
 
+build --action_env CXX="/nix/store/4hs6da0ihz147wl8yyqhw12ymb3rjz0z-clang-15.0.7/bin/clang-15"
+build --action_env LD="/nix/store/qii1yq15asjnlr3l7a652dxkm28vhs5d-lld-15.0.7/bin/ld.lld"
+build --action_env AR="/nix/store/485bq8n1s649znxgi9wvq88wqgm9pn1r-llvm-15.0.7/bin/llvm-ar"
+
 # Debug config
 build:debug --strip=never
 build:debug --cxxopt=-g
 build:debug --cxxopt=-O1
+
+try-import %workspace%/.bazelrc.user
