--- a/limine.cfg
+++ b/limine.cfg
@@ -1,12 +1,11 @@
 # Timeout in seconds that Limine will use before automatically booting.
 TIMEOUT=5
 
+VERBOSE=yes
+
 # The entry name that will be displayed in the boot menu
 :myOS
-
-# Change the protocol line depending on the used protocol.
-PROTOCOL=limine
-
-# Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
-# It must have the same name as the bazel kernel target!
-KERNEL_PATH=boot:///kernel
+    PROTOCOL=limine
+    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
+    # It must have the same name as the bazel kernel target!
+    KERNEL_PATH=boot:///kernel
