--- a/.bazelrc
+++ b/.bazelrc
@@ -1,12 +1,9 @@
 build --macos_sdk_version=13.1
 
-build --cpu=x86_64
-build --crosstool_top=//toolchain
-build --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build --platforms=//:hobby_os_platform
+build --host_platform=//:local_host_platform
 
-build --action_env CXX="/nix/store/4hs6da0ihz147wl8yyqhw12ymb3rjz0z-clang-15.0.7/bin/clang-15"
-build --action_env LD="/nix/store/qii1yq15asjnlr3l7a652dxkm28vhs5d-lld-15.0.7/bin/ld.lld"
-build --action_env AR="/nix/store/485bq8n1s649znxgi9wvq88wqgm9pn1r-llvm-15.0.7/bin/llvm-ar"
+build --incompatible_enable_cc_toolchain_resolution
 
 # Debug config
 build:debug --strip=never
